--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "5gals"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["German meligera@ya.ru>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
